# rootAnalysis

./: .gitignore
Algorithms/: CMakeLists.txt
Algorithms/inc/: BaseAlgorithm.h
Algorithms/src/: Algorithm.cpp  Algorithm.h
Data/: CMakeLists.txt
Data/src/: Data.cpp  Data.h
Helloworld/: CMakeLists.txt  HelloWorld.py
Helloworld/src/: Helloworld.cpp  Helloworld.h  HelloworldLinkDef.h
Loop/: CMakeLists.txt  EventLoop.py  histograms.root
Loop/src/: EventLoop.cpp  EventLoop.h  EventLoopLinkDef.h
